# commitraider

./: Cargo.toml  README.md
src/: main.rs
src/analysis/: code_analyzer.rs  complexity.rs  dependencies.rs  mod.rs
src/config/: mod.rs
src/git/: analyzer.rs  links.rs  mod.rs  stats.rs
src/output/: html.rs  mod.rs  reporter.rs
src/output/assets/: script.js  styles.css
src/output/templates/: code_quality_section.html  git_analysis_section.html  heatmap_section.html  priority_areas_section.html  report.html  risk_overview.html  stats_section.html  test_analysis_section.html  vulnerabilities_section.html  vulnerability_item.html
src/patterns/: engine.rs  mod.rs
