[package]
name = "commitraider"
version = "0.1.0"
edition = "2021"
authors = ["Martin Schwarzl <mschwarzl@example.com>"]
description = "CommitRaider - Git History Security Scanner that raids commit history for vulnerabilities"
license = "MIT"
repository = "https://github.com/mschwarzl/commitraider"
keywords = ["security", "vulnerability", "git", "commit", "scanner"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Git operations
git2 = "0.20.2"

# Pattern matching
regex = "1.10"
fancy-regex = "0.16.1"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File operations
ignore = "0.4"

# Progress bars
indicatif = "0.18"

# Terminal output
colored = "3.0"

# Configuration
config = "0.15.16"

# Parallel processing
rayon = "1.8"

# Code analysis
tokei = "12.1"

# HTML templating
tera = "1.19"

# Asset embedding
rust-embed = { version = "8.5", features = ["include-exclude"] }

# [dev-dependencies]
# Add test dependencies as needed

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
